# HEMP

./: HEMP.cabal  HempDecl.hs  HempLexer.x  HempParser.y  HempTypes.hs  Makefile  hemp-decl.hs  hemp-lexer.x  hemp-parser.y  hemp-types.hs  sisal-lexer.x
samples/: simplecmp.sis  simplefor.sis  simplemul.sis
